BE/error/src/main/java/com/example/demo/common/application/model/MemberIdModel.java
package com.example.demo.common.application.model;

public interface MemberIdModel {
    Long getMemberId();
}
